--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,6 +1,15 @@
 .btn{
   @apply font-bold py-2 px-4 rounded-full text-white focus:outline-none focus:ring shadow-lg hover:shadow-none transition-all duration-300;
 }
+.btn-t-rounded{
+  @apply font-bold py-2 px-4 rounded-tr-2xl text-white focus:outline-none focus:ring shadow-lg hover:shadow-none transition-all duration-300;
+}
+.btn-primary{
+  @apply bg-blue-900;
+}
+.btn-primary:hover{
+  @apply bg-blue-700;
+}
 .btn-primary{
   @apply bg-blue-900;
 }
